# research-assistant

./: .codespell-ignore  .env.template  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  GEMINI.md  KNOWN_ISSUES.md  LICENSE  PHASE_2_PROGRESS.md  README.md  VERIFICATION_REPORT.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.sh  verify.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs-validation.yml
.omc/plans/: open-questions.md  phase-9-execution-plan.md  phase-9.5-execution-plan.md
config/: daily_german_mt.yaml  deep_research.yaml  phase2_e2e_test.yaml  research_config.yaml  synthesis_config.yaml  test_e2e_config.yaml  test_pdf_extraction.yaml  test_single_topic.yaml
deployment/: docker-compose.yml
deployment/docker/: Dockerfile  grafana-datasources.yml
deployment/systemd/: arisp.service
docs/: ARCHITECTURE_REVIEW.md  KNOWN_ISSUES.md  PDF_EXTRACTION_SETUP.md  PHASED_DELIVERY_PLAN.md  PHASE_1_VERIFICATION.md  PHASE_3.6_VERIFICATION_REPORT.md  PHASE_3.7_VERIFICATION_REPORT.md  REFACTORING_OPPORTUNITIES.md  SYSTEM_ARCHITECTURE.md  TECH_DEBT.md  VERIFICATION_TEMPLATE.md
docs/audits/: 2026-05_provider_pdf_audit.md  COVERAGE_AUDIT_P0_T3.md
docs/dra/: FAISS_ATOMIC_SWAP.md
docs/guides/: PROVIDER_SELECTION.md
docs/operations/: DAILY_AUTOMATION_GUIDE.md  MONITORING.md  PRE_COMMIT_HOOKS.md  RUNBOOK.md  TROUBLESHOOTING.md
docs/progress/: PHASE_2_PROGRESS.md
docs/proposals/: 001_DISCOVERY_PROVIDER_STRATEGY.md  002_PDF_EXTRACTION_RELIABILITY.md  003_PHASE_7_DISCOVERY_RESEARCH.md  004_OPENRESEARCHER_OFFLINE_TRAJECTORY_SYNTHESIS.md
docs/security/: DEPENDENCY_SECURITY_AUDIT.md
docs/specs/: CI_OPTIMIZATION_SPEC.md  DOC_AUTOMATION_SPEC.md  LOCAL_DAILY_AUTOMATION_SPEC.md  PHASE_1_5_SPEC.md  PHASE_1_SPEC.md  PHASE_2.5_SPEC.md  PHASE_2_SPEC.md  PHASE_3.1_SPEC.md  PHASE_3.2_SPEC.md  PHASE_3.2_SUMMARY.md  PHASE_3.3_LLM_FALLBACK_SPEC.md  PHASE_3.4_PDF_PRIORITY_SPEC.md  PHASE_3.5_SPEC.md  PHASE_3.6_SPEC.md  PHASE_3.8_SPEC.md  PHASE_3_SPEC.md  PHASE_4_SPEC.md  PHASE_5.1_SPEC.md  PHASE_5.2_SPEC.md  PHASE_5.3_SPEC.md  PHASE_5.4_SPEC.md  PHASE_5.5_SPEC.md  PHASE_5.6_SPEC.md  PHASE_5_OVERVIEW.md  PHASE_6_DISCOVERY_ENHANCEMENT_SPEC.md  PHASE_7.1_DESIGN.md  PHASE_7.1_SPEC.md  PHASE_7.2_DESIGN.md  PHASE_7.2_SPEC.md  PHASE_7.3_DESIGN.md  PHASE_7.3_SPEC.md  PHASE_8_DRA_SPEC.md  PHASE_9.5_RELIABILITY_BREADTH_LEARNING_SPEC.md  PHASE_9_RESEARCH_INTELLIGENCE_SPEC.md  REFACTORING_SPEC.md
docs/user_guides/: DRA_USER_GUIDE.md
docs/verification/: PHASE_1_5_COVERAGE_ANALYSIS.md  PHASE_1_5_VERIFICATION.md  PHASE_1_5_VERIFICATION_REPORT.md  PHASE_1_VERIFICATION.md  PHASE_2.5_VERIFICATION.md  PHASE_2_VERIFICATION_REPORT.md  PHASE_3.1_VERIFICATION.md  PHASE_3.2_VERIFICATION_REPORT.md  PHASE_3_VERIFICATION.md  PHASE_6_VERIFICATION_REPORT.md  PHASE_7_2_VERIFICATION_REPORT.md  REFACTORING_VERIFICATION_REPORT.md
monitoring/: prometheus.yml
monitoring/alerts/: arisp_alerts.yml
scripts/: com.arisp.daily-research.plist  daily_launcher.py  daily_run.sh  migrate_to_python310.sh  migrate_to_python314.sh  release.sh  safe_worktree_remove.sh  setup_git_aliases.sh  setup_hooks.sh  validate_phase_specs.py
scripts/hooks/: pre-commit  pre-push
src/: .gitkeep  cli.py
src/cli/: __init__.py  __main__.py  catalog.py  citation.py  feedback.py  health.py  monitor.py  research.py  run.py  schedule.py  synthesize.py  trajectories.py  utils.py  validate.py
src/data/: venue_scores.json  venue_scores.yaml
src/health/: __init__.py  checks.py  server.py
src/models/: cache.py  catalog.py  checkpoint.py  concurrency.py  config.py  cross_synthesis.py  dedup.py  discovery.py  dra.py  extraction.py  feedback.py  filters.py  llm.py  notification.py  paper.py  pdf_extraction.py  provider.py  query.py  registry.py  synthesis.py
src/observability/: __init__.py  context.py  logging.py  metrics.py
src/orchestration/: __init__.py  concurrent_pipeline.py  context.py  paper_processor.py  pipeline.py  research_pipeline.py  result.py
src/output/: __init__.py  cross_synthesis_generator.py  delta_generator.py  enhanced_generator.py  markdown_generator.py  synthesis_engine.py
src/scheduling/: __init__.py  jobs.py  scheduler.py
src/services/: cache_service.py  catalog_service.py  checkpoint_service.py  citation_explorer.py  config_manager.py  cross_synthesis_service.py  dedup_service.py  discovery_filter.py  discovery_service.py  enhanced_discovery_service.py  extraction_service.py  filter_service.py  llm_service.py  notification_service.py  pdf_acquisition.py  pdf_service.py  quality_filter_service.py  (+9 more)
tests/: .gitkeep  conftest.py  conftest_types.py  test_validate_phase_specs.py
(+352 files in other folders)
