[project]
name = "research-assist"
version = "0.1.0"
description = "Automated Research Ingestion & Synthesis Pipeline (ARISP)"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Raymond Lei", email = "leixiaoyu@example.com"}
]
keywords = ["research", "papers", "ai", "llm", "pdf", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py312']  # Black's highest supported version (code is compatible with 3.14)
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
# ignore_missing_imports: Allows imports from packages without type stubs
# disable_error_code: Suppresses "import-untyped" errors that aren't caught by ignore_missing_imports
# Both are needed: ignore_missing_imports handles missing stubs, disable_error_code handles typed
# packages that import from untyped dependencies (e.g., yaml importing from libyaml)
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
# Tests use explicit @pytest.mark.asyncio markers; pin to strict so a
# missing marker fails fast rather than silently skipping coroutine tests.
asyncio_mode = "strict"

[tool.coverage.run]
source = ["src"]
branch = true  # Enable branch coverage measurement
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 99  # Minimum combined (line + branch) coverage required
# Exclude common patterns that don't need coverage
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101", "B601"]
